force-app/main/default/objects/NCMT_Assembly_Lookup_Frequency__c/NCMT_Assembly_Lookup_Frequency__c.object-meta.xml
<CustomObject>
    <label>NCMT Assembly Lookup Frequency</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Assembly Freq. Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Assembly Lookup Frequency</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>