force-app/main/default/objects/NCMT_Assembly_Lookup_Frequency__c/fields/Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Man_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Man Hours</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>