force-app/main/default/objects/NCMT_Assembly_Lookup_Frequency__c/fields/NCMT_Assembly_Lookup_Master__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Assembly_Lookup_Master__c</fullName>
    <label>NCMT Assembly Lookup Master</label>
    <referenceTo>NCMT_Assembly_Lookup_Detail__c</referenceTo>
    <relationshipLabel>NCMT Assembly Lookup Frequency</relationshipLabel>
    <relationshipName>NCMT_Assembly_Lookup_Frequency</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>