force-app/main/default/objects/NCMT_Assembly_Lookup_Frequency__c/fields/Quaterly_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Quaterly_Frequency__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quaterly Frequency</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>