force-app/main/default/objects/NCMT_Assembly_Lookup_Frequency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NCMT_Assembly_Lookup_Master__c</columns>
    <columns>Assembly_Number__c</columns>
    <columns>Task_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Man_Hours__c</columns>
    <columns>Weekly_Frequency__c</columns>
    <columns>Monthly_Frequency__c</columns>
    <columns>Quaterly_Frequency__c</columns>
    <columns>Semi_Annual_Frequency__c</columns>
    <columns>Annual_Frequency__c</columns>
    <columns>File_Name__c</columns>
    <columns>Fiscal_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>