force-app/main/default/objects/NCMT_Assembly_Lookup_Frequency__c/listViews/FY_2020.listView-meta.xml
<ListView>
    <fullName>FY_2020</fullName>
    <columns>NAME</columns>
    <columns>NCMT_Assembly_Lookup_Master__c</columns>
    <columns>Assembly_Number__c</columns>
    <columns>Task_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Man_Hours__c</columns>
    <columns>Weekly_Frequency__c</columns>
    <columns>Monthly_Frequency__c</columns>
    <columns>Quaterly_Frequency__c</columns>
    <columns>Semi_Annual_Frequency__c</columns>
    <columns>Annual_Frequency__c</columns>
    <columns>File_Name__c</columns>
    <columns>Fiscal_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <label>FY-2020</label>
</ListView>